--- a/servicos.html
+++ b/servicos.html
@@ -240,7 +240,7 @@
             target="_blank">
                 <img src="facebook-logo.png" alt="Facebook">
             </a>
-            <a href="####" target="_blank">
+            <a href="https://www.linkedin.com/in/atecseven-tecnologia-9909a5337?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                 <img src="linkedin-logo.png" alt="LinkedIn">
             </a>
         </div>
