--- a/servicos.html
+++ b/servicos.html
@@ -219,7 +219,7 @@
         <section id="contact" class="contact">
             <h2>Contato</h2>
             <p>Entre em contato conosco para saber mais sobre nossos serviços:</p>
-            <p><strong>Email:</strong> atecseven@gmail.com</p>
+            <p><strong>Email:</strong> comercial@atecseven.com.br</p>
             <p><strong>Telefone:</strong> (64) 9 9295-2748</p>
         </section>
     </div>
