--- a/servicos.html
+++ b/servicos.html
@@ -22,7 +22,7 @@
           width: 120px;
         }
         header{
-          background: linear-gradient(to right, #0000ff, #123);
+          linear-gradient(to right, #1E90FF, #1a1a1a);
             color: white;
             padding: 1em 0;
             text-align: center;
@@ -44,6 +44,7 @@
             text-decoration: none;
             margin: 0 1em;
             padding: 0.5em 1em;
+            border-radius: 10px;
         }
         nav a:hover {
             background-color: #004080;
@@ -76,8 +77,9 @@
             text-align: center;
         }
         .card img {
-            max-width: 100%;
+            max-width: 300px;
             height: auto;
+            border-radius: 5px;
         }
         .card-content {
             padding: 1.5em;
@@ -145,8 +147,8 @@
 </head>
 <body>
     <header>
-      <img class="logo" src="logo.jpg">
-        <h1>AtecSeven Tecnologia</h1>
+      <img class="logo" src="">
+        <h1></h1>
         <nav>
             <a href="index.html">Início</a>
             <a href="servicos.html">Serviços</a>
@@ -219,7 +221,7 @@
         <section id="contact" class="contact">
             <h2>Contato</h2>
             <p>Entre em contato conosco para saber mais sobre nossos serviços:</p>
-            <p><strong>Email:</strong> comercial@atecseven.com.br</p>
+            <p><strong>Email:</strong> atecseven@gmail.com</p>
             <p><strong>Telefone:</strong> (64) 9 9295-2748</p>
         </section>
     </div>
