--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <section id="contact" class="contact">
             <h2>Contato📞</h2>
             <p>Entre em contato conosco para saber mais sobre nossos serviços:</p>
-            <p><strong>📩 Email:</strong> atecseven@gmail.com</p>
+            <p><strong>📩 Email:</strong> comercial@atecseven.com.br</p>
             <p><strong>📲 Telefone:</strong> (64) 9 9295-2748</p>
             <button class="button"> <a href="https://wa.me/5564992952748?text=Ol%C3%A1%20AtecSeven%20Tecnologia!%20Estou%20vindo%20do%20seu%20site%20e%20gostaria%20de%20contratar%20alguns%20de%20seus%20servi%C3%A7os.%20Poderia%20me%20atender%20no%20momento%3F">Solicitar Orçamento</a> </button>
         </section>
