--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <p><strong>📲 Telefone:</strong> (64) 9 9295-2748</p>
             <button class="button"> <a
             href="chatbot.html">
-            Atendimento Atec7</a>
+            Atendimento</a>
             </button>
             
             <button class="button"> <a
