--- a/servicos.html
+++ b/servicos.html
@@ -46,6 +46,10 @@
             padding: 0.5em 1em;
             border-radius: 10px;
         }
+        a{
+          text-decoration: none;
+          color: white;
+        }
         nav a:hover {
             background-color: #004080;
         }
@@ -162,6 +166,20 @@
         <section id="services" class="services">
             <h2>Nossos Serviços</h2>
             <div class="card">
+                <img src="delivery.jpg" alt="Consultoria e Desenvolvimento de Software">
+                <div class="card-content">
+                    <h3>Software Delivery Food</h3>
+                    <p>Software totalmente personalizado, intuitivo e fácil de
+                    usar, clique no botão abaixo e Confira.</p>
+                    <button>
+                      <a
+                      href="https://atec7.github.io/demonstracao_hamburgueria/">
+                        Demonstração
+                      </a>
+                    </button>
+                </div>
+            </div>
+            <div class="card">
                 <img src="consultoria.jpg" alt="Consultoria e Desenvolvimento de Software">
                 <div class="card-content">
                     <h3>Consultoria e Desenvolvimento de Software</h3>
@@ -221,7 +239,8 @@
         <section id="contact" class="contact">
             <h2>Contato</h2>
             <p>Entre em contato conosco para saber mais sobre nossos serviços:</p>
-            <p><strong>Email:</strong> comercial@atecseven.com.br</p>
+            <p><strong>Email:</strong>
+            comercial@atecseven.com.br</p>
             <p><strong>Telefone:</strong> (64) 9 9295-2748</p>
         </section>
     </div>
