--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </section>
         <section>
           <h2 class="service">Promoções⚠️</h2>
-<iframe width="100%" height="400" src="https://www.youtube.com/embed/P-xsfW_ums0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="400" src="https://youtu.be/jl9dC7eY130?si=8MJqUvCwPC6J0cL7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section id="contact" class="contact">
             <h2>Contato📞</h2>
