--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </section>
         <section>
           <h2 class="service">Promoções⚠️</h2>
-<iframe width="100%" height="400" src="https://youtube.com/shorts/jl9dC7eY130?si=OkAzIweiyfLKpCEy" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="100%" height="400" src="https://youtu.be/P-xsfW_ums0?si=3MXsAifMKQa1Eswf" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section id="contact" class="contact">
             <h2>Contato📞</h2>
