--- a/index.html
+++ b/index.html
@@ -236,17 +236,17 @@
                 <div class="service-item" id="criacao-sites">
                     <h3>Criação de Sites</h3>
                     <p>Desenvolvimento de sites empresariais personalizados para melhorar a presença online.</p>
-                    <a href="#" class="button">Saiba Mais</a>
+                    <a href="https://wa.me/5564992952748?text=Olá%2C%20equipe%20AtecSeven%20Tecnologia!%20Visitei%20o%20site%20de%20vocês%20e%20estou%20interessado%20nos%20serviços%20oferecidos.%20Gostaria%20de%20mais%20informações%20sobre%20como%20podemos%20colaborar.%20Obrigado." class="button">Saiba Mais</a>
                 </div>
                 <div class="service-item" id="dominios">
                     <h3>Domínios Personalizados</h3>
                     <p>Registro e configuração de domínios exclusivos para a sua empresa.</p>
-                    <a href="#" class="button">Saiba Mais</a>
+                    <a href="https://wa.me/5564992952748?text=Olá%2C%20equipe%20AtecSeven%20Tecnologia!%20Visitei%20o%20site%20de%20vocês%20e%20estou%20interessado%20nos%20serviços%20oferecidos.%20Gostaria%20de%20mais%20informações%20sobre%20como%20podemos%20colaborar.%20Obrigado." class="button">Saiba Mais</a>
                 </div>
                 <div class="service-item" id="dns">
                     <h3>Configuração de DNS</h3>
                     <p>Serviço completo de configuração de servidores DNS para garantir a segurança e eficiência.</p>
-                    <a href="#" class="button">Saiba Mais</a>
+                    <a href="https://wa.me/5564992952748?text=Olá%2C%20equipe%20AtecSeven%20Tecnologia!%20Visitei%20o%20site%20de%20vocês%20e%20estou%20interessado%20nos%20serviços%20oferecidos.%20Gostaria%20de%20mais%20informações%20sobre%20como%20podemos%20colaborar.%20Obrigado." class="button">Saiba Mais</a>
                 </div>
             </div>
         </section>
@@ -282,16 +282,21 @@
     <footer>
         <p>&copy; 2024 AtecSeven Tecnologia. Todos os direitos reservados.</p>
         <div class="social-icons">
-    <a href="#"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-whatsapp"></i></a>
-    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/atecseven.tecnologia?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+    <a
+    href="https://wa.me/5564992952748?text=Olá%2C%20equipe%20AtecSeven%20Tecnologia!%20Visitei%20o%20site%20de%20vocês%20e%20estou%20interessado%20nos%20serviços%20oferecidos.%20Gostaria%20de%20mais%20informações%20sobre%20como%20podemos%20colaborar.%20Obrigado."><i
+    class="fab fa-whatsapp"></i></a>
+    <a
+    href="https://www.linkedin.com/in/atecseven-tecnologia-9909a5337?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+    class="fab fa-linkedin-in"></i></a>
+    <a
+    href="https://www.instagram.com/atecseven_tecnologia/profilecard/?igsh=MTN5dTMwd3hmMmJ4ZQ=="><i
+    class="fab fa-instagram"></i></a>
 </div>
     </footer>
     <script>
       function acceptCookies() {
     document.getElementById('cookieBanner').style.display = 'none';
-    // Aqui você pode adicionar um código para salvar a escolha do usuário, por exemplo, em um cookie
 }
     </script>
 </body>
