--- a/index.html
+++ b/index.html
@@ -1,215 +1,225 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AtecSeven Tecnologia</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-        header {
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            padding: 20px 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2em;
-            font-weight: bold;
-        }
-        header p {
-            margin: 5px 0;
-            font-size: 1.1em;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #34495e;
-            padding: 10px ;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        nav a {
-            color: #ecf0f1;
-            margin: 0 15px;
-            text-decoration: none;
-            font-size: 1em;
-            transition: color 0.3s ease;
-        }
-        nav a:hover {
-            color: #3498db;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-        .section h2 {
-            margin-bottom: 20px;
-            font-size: 2em;
-            font-weight: bold;
-            border-bottom: 3px solid #3498db;
-            padding-bottom: 10px;
-            color: #2c3e50;
-        }
-        .section p {
-            font-size: 1em;
-            line-height: 1.6;
-            color: #666;
-        }
-        .services, .contact {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-        }
-        .service-item, .contact-item {
-            flex: 1 1 calc(33.333% - 20px);
-            margin: 10px;
-            padding: 20px;
-            background-color: #ecf0f1;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-        .service-item h3, .contact-item h3 {
-            margin-bottom: 10px;
-            font-size: 1.4em;
-            color: #2c3e50;
-        }
-        .service-item p, .contact-item p {
-            font-size: 1em;
-            color: #666;
-        }
-        .service-item:hover, .contact-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin: 10px 0;
-            font-size: 1em;
-            background-color: #3498db;
-            color: #fff;
-            text-align: center;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-        }
-        .button:hover {
-            background-color: #2980b9;
-        }
-        .video-section {
-            text-align: center;
-            margin: 40px 0;
-        }
-        iframe {
-            width: 100%;
-            height: 450px;
-            border: none;
-        }
-        footer {
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            padding: 20px 0;
-            text-align: center;
-        }
-        footer p {
-            margin: 5px 0;
-            font-size: 1em;
-        }
-        footer .social-icons a {
-            color: #ecf0f1;
-            margin: 0 10px;
-            font-size: 1.2em;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-        footer .social-icons a:hover {
-            color: #3498db;
-        }
-        @media (max-width: 768px) {
-            .service-item, .contact-item {
-                flex: 1 1 100%;
-            }
-            nav {
-                flex-direction: column;
-            }
-            nav a {
-                margin: 10px 0;
-            }
-        }
-        
-        .logo{
-          border-radius: 50%;
-          max-width: 150px;
-        }
-        
-        .cookie-banner {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px 5px 0 0;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
-    font-size: 14px;
-    z-index: 1000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+ <style>
+   body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f9;
+    color: #333;
 }
 
-.cookie-banner a {
-    color: #3498db;
-    text-decoration: none;
-    margin-left: 5px;
-}
-
-.cookie-banner button {
-    background-color: #3498db;
+header {
+    background: linear-gradient(90deg, #3498db, #1e90ff);
     color: white;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    margin-top: 10px;
+    text-align: center;
+    padding: 20px 0;
+    animation: fadeIn 1s ease-in-out;
+}
+
+header .logo {
+    max-width: 100px;
+    margin-bottom: 10px;
+}
+
+header h2 {
+    margin: 0;
+    font-size: 2.5em;
+}
+
+header p {
+    font-size: 1.2em;
+}
+
+nav {
+    background: linear-gradient(90deg, #1e90ff, #3498db);
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 1.1em;
+    transition: color 0.3s, transform 0.3s;
+}
+
+nav a:hover {
+    color: #ffdb58;
+    transform: scale(1.1);
+}
+
+.section {
+    padding: 50px 20px;
+    text-align: center;
+    animation: fadeInUp 1s ease-in-out;
+}
+
+.section h2 {
+    font-size: 2em;
+    margin-bottom: 20px;
+    color: #1e90ff;
+}
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.service-item {
+    background: white;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.service-item:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+.service-item h3 {
+    color: #1e90ff;
+    margin-bottom: 10px;
+}
+
+.service-item p {
+    font-size: 0.9em;
+    margin-bottom: 15px;
+}
+
+.service-item .button {
+    background: linear-gradient(90deg, #1e90ff, #3498db);
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
 
-.cookie-banner button:hover {
-    background-color: #3498db;
+.service-item .button:hover {
+    background-color: #ffdb58;
 }
 
-@media (min-width: 600px) {
-    .cookie-banner {
-        flex-direction: row;
-        justify-content: space-between;
+footer {
+    background: linear-gradient(90deg, #3498db, #1e90ff);
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
+footer .social-icons a {
+    color: white;
+    margin: 0 10px;
+    font-size: 1.5em;
+    transition: color 0.3s, transform 0.3s;
+}
+
+footer .social-icons a:hover {
+    color: #ffdb58;
+    transform: scale(1.2);
+}
+
+.cookie-banner {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: linear-gradient(90deg, #1e90ff, #3498db);
+    color: white;
+    text-align: center;
+    padding: 10px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+    animation: slideUp 1s ease-in-out;
+}
+
+.cookie-banner a {
+    color: #ffdb58;
+    text-decoration: underline;
+}
+
+.cookie-banner button {
+    background: #ffdb58;
+    color: #333;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.cookie-banner button:hover {
+    background-color: #3498db;
+    transform: scale(1.1);
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
     }
-    .cookie-banner button {
-        margin-top: 0;
-        margin-left: 10px;
+    to {
+        opacity: 1;
     }
 }
-    </style>
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideUp {
+    from {
+        opacity: 0;
+        transform: translateY(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@media (max-width: 768px) {
+    .services {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+    nav a {
+        margin: 10px 0;
+    }
+
+    header h2 {
+        font-size: 1.8em;
+    }
+
+    .service-item {
+        width: 90%;
+    }
+}
+ </style>
     <div class="cookie-banner" id="cookieBanner">
     Este site utiliza cookies para melhorar sua experiência. Ao continuar
     navegando, você concorda com nossa <a href="cookies.html" style="color:
@@ -231,25 +241,60 @@
     </nav>
     <div class="container">
         <section id="services" class="section">
-            <h2>Serviços</h2>
-            <div class="services">
-                <div class="service-item" id="criacao-sites">
-                    <h3>Criação de Sites</h3>
-                    <p>Desenvolvimento de sites empresariais personalizados para melhorar a presença online.</p>
-                    <a href="https://wa.me/5564992952748?text=Olá%2C%20equipe%20AtecSeven%20Tecnologia!%20Visitei%20o%20site%20de%20vocês%20e%20estou%20interessado%20nos%20serviços%20oferecidos.%20Gostaria%20de%20mais%20informações%20sobre%20como%20podemos%20colaborar.%20Obrigado." class="button">Saiba Mais</a>
-                </div>
-                <div class="service-item" id="dominios">
-                    <h3>Domínios Personalizados</h3>
-                    <p>Registro e configuração de domínios exclusivos para a sua empresa.</p>
-                    <a href="https://wa.me/5564992952748?text=Olá%2C%20equipe%20AtecSeven%20Tecnologia!%20Visitei%20o%20site%20de%20vocês%20e%20estou%20interessado%20nos%20serviços%20oferecidos.%20Gostaria%20de%20mais%20informações%20sobre%20como%20podemos%20colaborar.%20Obrigado." class="button">Saiba Mais</a>
-                </div>
-                <div class="service-item" id="dns">
-                    <h3>Configuração de DNS</h3>
-                    <p>Serviço completo de configuração de servidores DNS para garantir a segurança e eficiência.</p>
-                    <a href="https://wa.me/5564992952748?text=Olá%2C%20equipe%20AtecSeven%20Tecnologia!%20Visitei%20o%20site%20de%20vocês%20e%20estou%20interessado%20nos%20serviços%20oferecidos.%20Gostaria%20de%20mais%20informações%20sobre%20como%20podemos%20colaborar.%20Obrigado." class="button">Saiba Mais</a>
-                </div>
-            </div>
-        </section>
+    <h2>Serviços</h2>
+    <div class="services">
+        <div class="service-item" id="criacao-sites">
+            <h3>Criação de Sites</h3>
+            <p>Desenvolvimento de sites empresariais personalizados para melhorar a presença online.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+        <div class="service-item" id="criacao-aplicativos">
+            <h3>Criação de Aplicativos</h3>
+            <p>Desenvolvimento de aplicativos sob medida para facilitar o engajamento com os clientes.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+        <div class="service-item" id="landpages">
+            <h3>Landpages</h3>
+            <p>Construção de páginas atrativas para aumentar conversões e captar leads.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+        <div class="service-item" id="emails-empresariais">
+            <h3>Emails Personalizados Empresariais</h3>
+            <p>Criação de contas de email exclusivas e profissionais para sua empresa.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+        <div class="service-item" id="hospedagem-sites">
+            <h3>Hospedagem de Sites</h3>
+            <p>Serviço confiável de hospedagem para garantir que seu site esteja sempre online.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+        <div class="service-item" id="bancos-dados">
+            <h3>Bancos de Dados</h3>
+            <p>Soluções completas para armazenamento e gerenciamento seguro de dados.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+        <div class="service-item" id="suporte-tecnico">
+            <h3>Suporte Técnico 24h</h3>
+            <p>Atendimento técnico contínuo para atender às necessidades da sua empresa.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+        <div class="service-item" id="plataformas-treinamento">
+            <h3>Plataformas de Treinamento</h3>
+            <p>Desenvolvimento de sistemas interativos para capacitação de equipes.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+        <div class="service-item" id="consultoria-tecnologica">
+            <h3>Consultoria Tecnológica</h3>
+            <p>Orientação especializada para ajudar sua empresa a aproveitar ao máximo a tecnologia.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+        <div class="service-item" id="parceiros-nacionais-internacionais">
+            <h3>Parceiros Nacionais e Internacionais</h3>
+            <p>Conexões estratégicas para expandir sua presença no mercado global.</p>
+            <a href="https://wa.me/5564992952748" class="button">Saiba Mais</a>
+        </div>
+    </div>
+</section>
         <section id="about" class="section">
             <h2>Sobre Nós</h2>
             <p>A AtecSeven Tecnologia é uma empresa dedicada a trazer soluções tecnológicas inovadoras para negócios de todos os tamanhos. Nossa missão é transformar ideias em realidade através de serviços personalizados e de alta qualidade.</p>
