--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@ footer .social-icons a:hover {
         <a href="#about">Sobre Nós</a>
         <a href="#video">Promoções</a>
         <a href="#contact">Contato</a>
+        <a href="https://atec7.github.io/chamados/">Abrir Chamado</a>
     </nav>
     <div class="container">
         <section id="services" class="section">
