--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <p><strong>Razão Social:</strong> ATECSEVEN TECNOLOGIA LTDA</p>
           <p><strong>Nome Fantasia:</strong> ATECSEVEN SOLUÇÕES TECNOLÓGICAS</p>
           <p><strong>Porte:</strong> ME</p>
-         <!-- <p><strong>Data de Abertura:</strong> 27/10/2025</p>-->
+          <p><strong>Data de Abertura:</strong> 27/10/2025</p>
           <p><strong>Natureza Jurídica:</strong> 206-2 - Sociedade Empresária Limitada</p>
         </div>
 
@@ -313,7 +313,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2023 AtecSeven Tecnologia. Todos os direitos reservados.</p>
+    <p>&copy; <span id="year"></span> AtecSeven Tecnologia. Todos os direitos reservados.</p>
   </footer>
 
   <script>
