--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   <nav>
     <a class="active" data-target="home">Início</a>
     <a data-target="services">Serviços</a>
-    <a data-target="about">Sobre Nós</a>
+    <a data-target="about">Sobre</a>
     <a data-target="contact">Contato</a>
     <button id="toggleTheme" aria-label="Alternar tema">🌙</button>
   </nav>
