Update subject placeholder in index.html

--- a/portaldechamados/index.html
+++ b/portaldechamados/index.html
@@ -161,7 +161,7 @@
             <div class="p-8 space-y-6">
                 <div class="space-y-1">
                     <label class="text-[10px] font-black uppercase text-slate-400 ml-2 tracking-widest">Assunto</label>
-                    <input type="text" id="t-subject" placeholder="Ex: Internet parou" class="w-full border-2 border-slate-100 p-4 rounded-2xl outline-none focus:border-blue-500 font-bold">
+                    <input type="text" id="t-subject" placeholder="Ex: Sistema fora do ar" class="w-full border-2 border-slate-100 p-4 rounded-2xl outline-none focus:border-blue-500 font-bold">
                 </div>
                 <div class="space-y-1">
                     <label class="text-[10px] font-black uppercase text-slate-400 ml-2 tracking-widest">Descrição</label>
